Clean emacs backups + update README

--- a/README
+++ b/README
@@ -1,14 +1,16 @@
 Тестовое задание
 
-требования для запуска:
-- rails3, ruby1.9.2 и т.д.
-- mysql. этого в условиях не было, но я не верю в универсальные решения для любой базы, это фантастика. вобщем, самый_главный_поисковый_запрос написан под mysql, 
-выбор продиктован тем, что он был под рукой, но я готов обсудить варианты решения под другие db.
+для запуска помимо очевидного нужен mysql. этого в условиях не было, но я не верю в универсальные решения для любой базы, это фантастика. 
+вобщем, самый_главный_поисковый_запрос написан и отлажен именно под mysql, а выбор продиктован тем, что он был под рукой, 
+но я готов обсудить варианты решения под другие db.
 
 rake db:setup загрузит сгенерированную базу. достаточного размера, чтобы было интересно, но меньшего, чем требовалось в условиях задачи
 поэтому реально для тестирования использовался другой дамп, сгенерированный соседним скриптом, на ~14млн записей. 
 дамп - здесь: http://dl.dropbox.com/u/1942230/10mil-dump.sql.gz 132Mb
 
-интерфейс:
+я надеюсь, что всё же правильно понял условия задания, потому что уже с двух индексов попал в ~100мс на ответ, при озвученных 4сек на 1млн, 
+как-то слишком просто получилось.
 
+интерфейс:
 http://localhost:3000/search.json?from=London&period=season&date=2011-01-01&weeks=2
+
